--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,15 +33,15 @@
  * Components
  */
 
-@import 'components/background';
-@import 'components/primary_nav';
-@import 'components/intro_area';
-@import 'components/resume_area';
-@import 'components/animals_area';
-@import 'components/pedals_area';
-@import 'components/design_area';
-@import 'components/divider_bar';
-@import 'components/footer';
+// @import 'components/background';
+// @import 'components/primary_nav';
+// @import 'components/intro_area';
+// @import 'components/resume_area';
+// @import 'components/animals_area';
+// @import 'components/pedals_area';
+// @import 'components/design_area';
+// @import 'components/divider_bar';
+// @import 'components/footer';
 
 /**
  * Utilities
