--- a/_sass/components/_primary_nav.scss
+++ b/_sass/components/_primary_nav.scss
@@ -2,170 +2,4 @@
     #PRIMARY-NAV
 \*------------------------------------*/
 
-$font-size-nav-items:       $font-size + 4;
-$faux-border-thick-size:    4px;
-
-.primary-nav {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 10;
-  margin: 0;
-  padding: 0;
-  height: 30px;
-  text-align: center;
-  background: $black;
-  border-top: $border-thick $white;
-  border-bottom: $border-thick $white;
-  transition: box-shadow 100ms;
-  list-style: none;
-}
-
-.primary-nav--yellow {
-  box-shadow: 0 0 0 $faux-border-thick-size $yellow;
-}
-
-.primary-nav--red {
-  box-shadow: 0 0 0 $faux-border-thick-size $red;
-}
-
-.primary-nav--green {
-  box-shadow: 0 0 0 $faux-border-thick-size $green;
-}
-
-.primary-nav--purple {
-  box-shadow: 0 0 0 $faux-border-thick-size $purple;
-}
-
-  .primary-nav__tag {
-    display: none;
-    position: fixed;
-    top: 26px;
-    right: 0;
-    left: 0;
-    z-index: -10;
-    height: 27px;
-    clip: rect(9px, auto, 35px, auto);
-
-    @include respond-to($medium-breakpoint) {
-      display: block;
-      position: static;
-      margin: -2px 15px 0;
-      float: left;
-      clip: auto;
-    }
-  }
-
-    .primary-nav__tag-link {
-      color: $white;
-      font-size: 11px;
-      transition: text-shadow 1200ms;
-
-      &:hover {
-        transition: text-shadow 300ms;
-      }
-
-      &:focus {
-        transition: text-shadow 300ms;
-        outline: none;
-      }
-    }
-
-  .primary-nav__item {
-    display: inline-block;
-    width: 25%;
-    font-size: 15px;
-    letter-spacing: -1px;
-    text-align: center;
-    transition: padding-bottom 3000ms, background 3000ms;
-
-    @include respond-to($small-breakpoint) {
-      font-size: 20px;
-      letter-spacing: normal;
-    }
-
-    @include respond-to($medium-breakpoint) {
-      width: 120px;
-      float: left;
-    }
-  }
-
-    .primary-nav__item-link {
-      display: inline-block;
-      padding-top: 16px;
-      color: $white;
-      text-decoration: none;
-      transition: color 3000ms, text-shadow 3000ms;
-
-      @include respond-to($small-breakpoint) {
-        padding-top: 11px;
-      }
-
-      &:hover {
-        transition: color 300ms, text-shadow 300ms;
-      }
-
-      &:focus {
-        transition: color 100ms, text-shadow 100ms;
-        outline: none;
-      }
-    }
-
-.item-highlight {
-
-  @include respond-to($small-breakpoint) {
-
-    &.primary-nav__item {
-      padding-bottom: 12px;
-    }
-  }
-
-  &.primary-nav__item {
-    padding-bottom: 15px;
-    transition: padding-bottom 300ms, background 300ms;
-  }
-
-  &.primary-nav__item--resume {
-    background: $yellow;
-  }
-
-  &.primary-nav__item--animals {
-    background: $red;
-  }
-
-  &.primary-nav__item--pedals {
-    background: $green;
-  }
-
-  &.primary-nav__item--design {
-    background: $purple;
-  }
-}
-
-.link-highlight {
-
-  .primary-nav__tag & {
-    text-shadow: -2px -2px 15px $white, 2px -2px 15px $white, -2px 2px 15px $white, 2px 2px 15px $white;
-  }
-
-  .primary-nav__item--resume & {
-    color: $yellow;
-    text-shadow: 0 -2px 1px $black;
-  }
-
-  .primary-nav__item--animals & {
-    color: $red;
-    text-shadow: 0 -2px 1px $black;
-  }
-
-  .primary-nav__item--pedals & {
-    color: $green;
-    text-shadow: 0 -2px 1px $black;
-  }
-
-  .primary-nav__item--design & {
-    color: $purple;
-    text-shadow: 0 -2px 1px $black;
-  }
-}
+.primary-nav {}
