--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,9 +33,8 @@
  * Components
  */
 
-// @import 'components/background';
+@import 'components/main_content';
 // @import 'components/primary_nav';
-// @import 'components/intro_area';
 // @import 'components/resume_area';
 // @import 'components/animals_area';
 // @import 'components/pedals_area';
