--- a/css/styles.scss
+++ b/css/styles.scss
@@ -34,7 +34,7 @@
  */
 
 @import 'components/main_content';
-// @import 'components/primary_nav';
+@import 'components/primary_nav';
 // @import 'components/resume_area';
 // @import 'components/animals_area';
 // @import 'components/pedals_area';
