--- a/_haml/partials/primary_nav.haml
+++ b/_haml/partials/primary_nav.haml
@@ -1,12 +1,11 @@
 %ul.primary-nav
-  %li.primary-nav__tag>
-    %a.primary-nav__tag-link{ href: '#top',  data: { nav_link: '' } }
-      %i.fa.fa-code.fa-3x
-  %li.primary-nav__item.primary-nav__item--resume>
-    %a.primary-nav__item-link{ href: '#resume-area',  data: { nav_link: '' } } RESUME
-  %li.primary-nav__item.primary-nav__item--animals>
-    %a.primary-nav__item-link{ href: '#animals-area',  data: { nav_link: '' } } ANIMALS
-  %li.primary-nav__item.primary-nav__item--pedals>
-    %a.primary-nav__item-link{ href: '#pedals-area',  data: { nav_link: '' } } PEDALS
-  %li.primary-nav__item.primary-nav__item--design>
-    %a.primary-nav__item-link{ href: '#design-area',  data: { nav_link: '' } } DESIGN
+  -# %li.primary-nav__tag>
+  -#   %a.primary-nav__tag-link{ href: '#top',  data: { nav_link: '' } }
+  -#     %i.fa.fa-code.fa-3x
+  %li.primary-nav__item>
+    %a.primary-nav__item-link{ href: '#shows-area',  data: { nav_link: '' } } LIVE SHOWS
+  %li.primary-nav__item>
+    %a.primary-nav__item-link{ href: '#videos-area',  data: { nav_link: '' } } VIDEOS
+  %li.primary-nav__item>
+    %a.primary-nav__item-link{ href: '#press-area',  data: { nav_link: '' } } PRESS
+
