--- a/_sass/elements/_headings.scss
+++ b/_sass/elements/_headings.scss
@@ -4,32 +4,23 @@
 
 h1 {
   margin: 0;
-  font-size: 11vw;
+  font-size: 5rem;
   font-weight: normal;
-  letter-spacing: 6px;
+  // letter-spacing: 6px;
   text-align: center;
-
-  @include respond-to($medium-breakpoint) {
-    font-size: 64px;
-    letter-spacing: 3px;
-  }
 }
 
 h2 {
   margin: 0 0 100px;
-  font-size: $font-size-large;
+  font-size: 4rem;
   font-weight: normal;
-  letter-spacing: 7px;
+  // letter-spacing: 7px;
   text-align: center;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 2.5rem;
   font-weight: normal;
-  letter-spacing: 5px;
+  // letter-spacing: 5px;
 
-  @include respond-to($medium-breakpoint) {
-    font-size: 24px;
-    letter-spacing: 7px;
-  }
 }
