--- a/_sass/settings/_typography.scss
+++ b/_sass/settings/_typography.scss
@@ -6,14 +6,18 @@
  * Google Fonts Import
  */
 
-@import url(https://fonts.googleapis.com/css?family=Bitter:400);
+@import url('https://fonts.googleapis.com/css?family=Bitter|Oswald:500&display=swap');
+// @import url(https://fonts.googleapis.com/css?family=Bitter:400);
+// @import url('https://fonts.googleapis.com/css?family=Oswald:500&display=swap');
 
 /**
  * Font Variables
  */
 
-$font-family-primary:      'Bitter', serif;
-$font-family-secondary:    'Helvetica', sans-serif;
+$font-family-primary:    'Bitter', serif;
+$font-family-secondary:      'Oswald', sans-serif;
+// $font-family-primary:      'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;
+// $font-family-primary:      'BebasNeueRegular', Arial, Helvetica, sans-serif;
 
 /**
  * Antialiasing
@@ -26,14 +30,15 @@ $font-family-secondary:    'Helvetica', sans-serif;
 }
 
 /**
- * Text Sizes
+ * font Size
  */
 
-$font-size:              16px;
-$font-size-small:        $font-size - 2;
-$font-size-large:        $font-size * 2;
-$font-size-x-large:      $font-size * 3;
-$font-size-huge:         $font-size * 4;
+// $font-size:              8px;
+// $font-size-small:        $font-size - 2;
+// $font-size-large:        $font-size * 2;
+// $font-size-x-large:      $font-size * 3;
+// $font-size-huge:         $font-size * 4;
+
 /*
 20 nav
 24 resume piece heading
