--- a/_haml/partials/primary_nav.haml
+++ b/_haml/partials/primary_nav.haml
@@ -3,9 +3,9 @@
   -#   %a.primary-nav__tag-link{ href: '#top',  data: { nav_link: '' } }
   -#     %i.fa.fa-code.fa-3x
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#shows-area',  data: { nav_link: '' } } LIVE SHOWS
+    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } LIVE SHOWS
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#videos-area',  data: { nav_link: '' } } VIDEOS
+    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } VIDEOS
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#press-area',  data: { nav_link: '' } } PRESS
+    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } PRESS
 
