--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,7 +35,7 @@
 
 @import 'components/main_content';
 @import 'components/primary_nav';
-// @import 'components/resume_area';
+@import 'components/releases';
 // @import 'components/animals_area';
 // @import 'components/pedals_area';
 // @import 'components/design_area';
