--- a/_haml/index.haml
+++ b/_haml/index.haml
@@ -18,9 +18,11 @@
 
   %body#top
     .main-content
-      %img{src: 'images/htlogo.png', alt: 'Faking logo.', class: 'main-content__masthead'}/
+      .main-content__page-header
+        %img{ class: 'main-content__masthead', src: 'images/htlogo.png', alt: 'Faking logo.' }
+        = Haml::Engine.new(File.read('generated_html/primary_nav.html')).render
 
-      = Haml::Engine.new(File.read('generated_html/primary_nav.html')).render
+      = Haml::Engine.new(File.read('generated_html/releases.html')).render
 
     -# .divider-bar
       -# %i.divider-bar__icon.fa.fa-code.fa-3x
