--- a/_sass/components/_primary_nav.scss
+++ b/_sass/components/_primary_nav.scss
@@ -4,14 +4,14 @@
 
 
 .primary-nav {
-  margin: 0 0 2rem;
+  margin: 0;
   padding: 0;
   font-family: $font-family-secondary;
   border-top: $border-thick $black;
   border-bottom: $border-thick $black;
   list-style: none;
+  background-image: linear-gradient(to right, $gray--light, rgba($gray--dark, 0.3), $gray--light);
 }
-
 
   .primary-nav__item {
     position: relative;
@@ -32,12 +32,12 @@
     .primary-nav__item-link {
       display: inline-block;
       padding: 1.5rem 2rem;
+      height: 20px;
       font-size: 2.5rem;
-      line-height: 2.5rem;
+      line-height: 2.4rem;
       color: $black;
       text-decoration: none;
       transition: color 3000ms, text-shadow 3000ms;
-      // border-right: solid $black 2px;
 
       @include large-mobile-up {
       }
