set up cover links and iframe players

--- a/_haml/partials/primary_nav.haml
+++ b/_haml/partials/primary_nav.haml
@@ -1,11 +1,18 @@
 %ul.primary-nav
-  -# %li.primary-nav__tag>
-  -#   %a.primary-nav__tag-link{ href: '#top',  data: { nav_link: '' } }
-  -#     %i.fa.fa-code.fa-3x
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } LIVE SHOWS
+    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } MUSIC
+
+  %li.primary-nav__divider>
+
+  %li.primary-nav__item>
+    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } SHOWS
+
+  %li.primary-nav__divider>
+
   %li.primary-nav__item>
     %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } VIDEOS
+
+  %li.primary-nav__divider>
+
   %li.primary-nav__item>
     %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } PRESS
-
