--- a/_haml/partials/primary_nav.haml
+++ b/_haml/partials/primary_nav.haml
@@ -1,6 +1,6 @@
 %ul.primary-nav
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } MUSIC
+    %a.primary-nav__item-link{ href: '/test',  data: { nav_link: '' } } MUSIC
 
   %li.primary-nav__divider>
 
