set up multi nested layout - pages - partials framework

--- a/_haml/partials/primary_nav.haml
+++ b/_haml/partials/primary_nav.haml
@@ -1,18 +1,18 @@
 %ul.primary-nav
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '/test',  data: { nav_link: '' } } MUSIC
+    %a.primary-nav__item-link{ href: '/music',  data: { nav_link: '' } } MUSIC
 
   %li.primary-nav__divider>
 
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } SHOWS
+    %a.primary-nav__item-link{ href: '/shows',  data: { nav_link: '' } } SHOWS
 
   %li.primary-nav__divider>
 
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } VIDEOS
+    %a.primary-nav__item-link{ href: '/videos',  data: { nav_link: '' } } VIDEOS
 
   %li.primary-nav__divider>
 
   %li.primary-nav__item>
-    %a.primary-nav__item-link{ href: '#',  data: { nav_link: '' } } PRESS
+    %a.primary-nav__item-link{ href: '/press',  data: { nav_link: '' } } PRESS
