--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,21 @@
 <!-- %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' } -->
 </head>
 <body id='top'>
+<div class='main-content'>
+<div class='main-content__page-header'>
+<img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
+<ul class='primary-nav'><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='/music'>MUSIC</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='/shows'>SHOWS</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='/videos'>VIDEOS</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='/press'>PRESS</a>
+</li></ul>
+
+</div>
 {{ content }}
+</div>
 </body>
 </html>
