--- a/_haml/pages/index.haml
+++ b/_haml/pages/index.haml
@@ -1,6 +1,6 @@
 \---
 layout: default
-title: FAKINGx
+title: FAKING - Philly Noise Rock
 \---
 
 = Haml::Engine.new(File.read('generated_html/releases.html')).render
