--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{{ title }}</title>
+<title>{{ page.title }}</title>
 <meta charset='utf-8'>
 <meta content='width = device-width, initial-scale = 1, maximum-scale = 1' name='viewport'>
 <link href='css/styles.css' rel='stylesheet' type='text/css'>
@@ -11,8 +11,11 @@
 </head>
 <body id='top'>
 <div class='main-content'>
+<div class='main-content__container'>
 <div class='main-content__page-header'>
+<a class='main-content__home-link' href='/'>
 <img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
+</a>
 <ul class='primary-nav'><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='/music'>MUSIC</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
@@ -25,6 +28,7 @@
 
 </div>
 {{ content }}
+</div>
 </div>
 </body>
 </html>
