add layout converstion to ruby helper

--- a/_haml/partials/releases.haml
+++ b/_haml/partials/releases.haml
@@ -1,33 +1,16 @@
 .releases
-  -# %a.releases_link{href: '#'}
-  -#   %img.releases__cover{src: 'images/covers/gc-cover-small.jpg', alt: 'Faking, Goddamn Cowards album.'}
-
-  -# %a.releases_link{href: '#'}
-  -#   %img.releases__cover{src: 'images/covers/vices-cover-small.jpg', alt: 'Faking, Vices seven inch'}
-
-  -# %a.releases_link{href: '#'}
-  -#   %img.releases__cover{src: 'images/covers/ghd-cover-small.jpg', alt: 'Faking, Greatest Hits Demo cassette'}
-
-  -# %a.releases_link{href: '#'}
-  -#   %img.releases__cover{src: 'images/covers/unsane-cover-small.jpg', alt: 'Faking, Unsane Tribute Compilation'}
-
-
   .releases__cover.releases__cover--gdc
-    %a.releases__cover-link{href: '#gdc'}
     %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
+    %a.releases__cover-link{href: '/release-goddamn-cowards'} Goddamn Cowards
 
   .releases__cover.releases__cover--vices
-    %a.releases__cover-link{href: '#vices'}
     %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=2330586006/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
+    %a.releases__cover-link{href: '/release-vices'} Vices
 
   .releases__cover.releases__cover--ghd
-    %a.releases__cover-link{href: '#ghd'}
     %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=537193901/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
+    %a.releases__cover-link{href: '/release-demo'} Greatest Hits Demo
 
   .releases__cover.releases__cover--unsane
-    %a.releases__cover-link{href: '#unsane'}
     %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'}
-
--# %iframe.releases__player{src: 'https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/artwork=small/transparent=true/'}
-
--# <iframe style="border: 0; width: 350px; height: 350px;" src="https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/" seamless><a href="http://faking.bandcamp.com/album/goddamn-cowards">Goddamn Cowards by FAKING</a></iframe>
+    %a.releases__cover-link{href: '/release-unsane'} Unsane Tribute Comp
