--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
 <!-- %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' } -->
 </head>
 <body id='top'>
-<div class='main-content main-content--default'>
+<div class='main-content main-content--home'>
 <div class='main-content__container'>
 <div class='main-content__page-header'>
 <div class='main-content__social-icons'>
@@ -40,7 +40,7 @@
 <a class='primary-nav__item-link' data-nav-link='' href='/press'>PRESS</a>
 </li></ul>
 
-<img alt='Faking live' class='main-content__photo' src='images/live-double-gray-thin.jpeg'>
+<img alt='Faking live' class='main-content__photo' src='images/live-double-gray.jpeg'>
 {{ content }}
 </div>
 </div>
