--- a/_sass/settings/_colors.scss
+++ b/_sass/settings/_colors.scss
@@ -6,7 +6,7 @@ $black:          #121110;
 $white:          #fbfbf7;
 $gray--dark:     lighten($black, 20);
 $gray--light:    lighten($black, 70);
-
+$blue:           #3F8EF2;
 
 
 /**
