--- a/css/styles.scss
+++ b/css/styles.scss
@@ -36,6 +36,7 @@
 @import 'components/main_content';
 @import 'components/primary_nav';
 @import 'components/releases';
+@import 'components/release_page';
 
 /**
  * Utilities
