--- a/_haml/home.haml
+++ b/_haml/home.haml
@@ -17,7 +17,7 @@
     / %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' }
 
   %body#top
-    .main-content.main-content--default
+    .main-content.main-content--home
       .main-content__container
         .main-content__page-header
           .main-content__social-icons
@@ -33,6 +33,6 @@
               %img.main-content__masthead{src: 'images/htlogo.png', alt: 'Faking logo.'}
         = Haml::Engine.new(File.read('generated_html/primary_nav.html')).render
 
-        %img.main-content__photo{src: 'images/live-double-gray-thin.jpeg', alt: 'Faking live'}
+        %img.main-content__photo{src: 'images/live-double-gray.jpeg', alt: 'Faking live'}
 
         {{ content }}
