--- a/_sass/components/_primary_nav.scss
+++ b/_sass/components/_primary_nav.scss
@@ -4,19 +4,17 @@
 
 
 .primary-nav {
-  margin: 0;
+  margin: 1rem 0 0;
   padding: 0;
   font-family: $font-family-secondary;
-  border-top: $border-thick $black;
-  border-bottom: $border-thick $black;
   list-style: none;
   display: flex;
   align-items: center;
 
   @include tablet-up {
-    justify-content: flex-start;
+    margin: 0 0 1.5rem;
+    justify-content: flex-end;
   }
-  // background-image: linear-gradient(to right, $gray--light, rgba($gray--dark, 0.3), $gray--light);
 }
 
   .primary-nav__item {
@@ -36,7 +34,7 @@
 
     .primary-nav__item-link {
       display: block;
-      padding: 1.5rem 0;
+      padding: 1rem 0;
       height: 20px;
       font-size: 2.5rem;
       line-height: 2.4rem;
